style: (Update button styles) Changed button border and background colors for improved visibility and consistency in the evaluations startup section.

--- a/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
+++ b/src/app/v2/modules/evaluaciones-startup/evaluaciones-startup.component.html
@@ -58,7 +58,7 @@
         <div class="lg:col-span-1">
           <button
             (click)="openLink()"
-            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+            class="my-1 w-full border border-yellow-600 p-8 bg-yellow-50 flex text-blue-700 hover:bg-yellow-100 transition"
           >
             Realizar Modelo de Formación para emprendedores
           </button>
@@ -92,21 +92,21 @@
           style="max-width: 350px"
           disabled
           (click)="openLink()"
-          class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700"
+          class="my-1 w-full border border-yellow-600 p-8 bg-yellow-50 flex text-blue-700"
         >
           Modelo de Startup | Emprendimiento realizado
           <svg
-            aria-hidden="true"
-            class="w-5 h-5 text-blue-700"
-            fill="currentColor"
-            viewBox="0 0 20 20"
-            xmlns="http://www.w3.org/2000/svg"
+        aria-hidden="true"
+        class="w-5 h-5 text-blue-700"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
           >
-            <path
-              fill-rule="evenodd"
-              d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
-              clip-rule="evenodd"
-            ></path>
+        <path
+          fill-rule="evenodd"
+          d="M16.707 5.293a1 1 0 010 1.414L8.414 15 5 11.586a1 1 0 011.414-1.414L8.414 12.172l7.879-7.879a1 1 0 011.414 0z"
+          clip-rule="evenodd"
+        ></path>
           </svg>
         </button>
         }@else {
@@ -115,18 +115,18 @@
           style="gap: 20px; justify-content: center"
         >
           <button
-            style="max-width: 350px"
-            (click)="openLinkStartup()"
-            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+        style="max-width: 350px"
+        (click)="openLinkStartup()"
+        class="my-1 w-full border border-yellow-600 p-8 bg-yellow-50 flex text-blue-700 hover:bg-yellow-100 transition"
           >
-            Realizar Modelo de Startup
+        Realizar Modelo de Startup
           </button>
           <button
-            style="max-width: 350px"
-            (click)="openLinkEmprendimiento()"
-            class="my-1 w-full border border-blue-700 p-8 bg-white-700 flex text-blue-700 hover:bg-gray-100 transition"
+        style="max-width: 350px"
+        (click)="openLinkEmprendimiento()"
+        class="my-1 w-full border border-yellow-600 p-8 bg-yellow-50 flex text-blue-700 hover:bg-yellow-100 transition"
           >
-            Realizar Modelo de Emprendimiento
+        Realizar Modelo de Emprendimiento
           </button>
         </div>
         }
