--- a/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
+++ b/src/app/v2/modules/proyecto-equipo/proyecto-equipo.component.html
@@ -6,7 +6,8 @@
 <main class="container mx-auto py-16 flex flex-col lg:flex-row">
   <!-- Sección de búsqueda y resultados -->
   <div class="w-full lg:w-3/4 pr-8 p-8">
-    <h1 class="text-4xl font-bold mb-12 border-b-2 border-[#fbcc2c] pb-4">Conoce a nuestro equipo</h1>
+    <!-- Cambio del borde amarillo a gris oscuro en el título -->
+    <h1 class="text-4xl font-bold mb-12 border-b-2 border-gray-800 pb-4">Conoce a nuestro equipo</h1>
 
     <!-- Espacio para contenido dinámico -->
     <section id="our-team">
@@ -14,7 +15,8 @@
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
           @for (item of equipo; track $index) {
           <div class="transform hover:-translate-y-1 transition-transform duration-300 ease-in-out">
-            <div class="bg-white border-2 border-gray-100 hover:border-[rgb(234,179,8)] transition-colors duration-300">
+            <!-- Cambio del hover border amarillo a gris oscuro -->
+            <div class="bg-white border-2 border-gray-100 hover:border-gray-800 transition-colors duration-300">
               <div class="flex flex-row h-full">
                 <div class="w-1/3 relative">
                   <img
@@ -23,7 +25,8 @@
                     alt="{{ item.nombre }}"
                     class="w-full h-full object-cover"
                   />
-                  <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-[rgb(234,179,8)] to-transparent opacity-30"></div>
+                  <!-- Cambio del gradiente amarillo a gris oscuro -->
+                  <div class="absolute bottom-0 left-0 w-full h-1/3 bg-gradient-to-t from-gray-800 to-transparent opacity-30"></div>
                 </div>
                 <div class="w-2/3 p-8 flex flex-col justify-center border-l-2 border-gray-100">
                   <h3 class="text-xl font-bold mb-3 text-gray-800">{{ item.nombre }}</h3>
