style: (Update hero section background) Removed background color from the hero section to enhance visual consistency across the component.

--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -592,7 +592,7 @@
   <!--sección sin login - Modernizada-->
   @if (authState() === AuthState.LoggedOut) {
   <!-- Hero Section -->
-  <section class="relative overflow-hidden bg-blue-50 py-20">
+  <section class="relative overflow-hidden py-20">
     <div class="relative z-10">
       <app-title-section
         [title]="'Evaluación de Nivel de Madurez Tecnológica'"
